[package]
name = "egui_elm"
version = "0.1.2"
edition = "2021"
rust-version = "1.74"
description = "Elm-style architecture on top of egui"
authors = ["Modolet"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/modolet/egui_elm"
documentation = "https://docs.rs/egui_elm"
keywords = ["egui", "elm", "gui"]
categories = ["gui"]
exclude = ["AGENTS.md", "target", ".gitignore"]

[features]
default = ["runtime"]
runtime = ["dep:eframe", "dep:tokio"]

[dependencies]
async-stream = "0.3.6"
eframe = { version = "0.33.2", optional = true }
egui = "0.33.2"
futures = "0.3.31"
futures-timer = "3.0.2"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
], optional = true }

[dev-dependencies]
chrono = "0.4.42"
